<resources>
    <string name="app_name">Github browser</string>
    <string name="app_name_with_caret">Github\nBrowser</string>
    <string name="guest">Guest</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="credentials_is_invalid">Credentials is invalid!</string>
    <string name="server_error">An server error has occurred</string>
    <string name="internal_error">An internal error has occurred</string>
    <string name="no_elements">Empty</string>
    <string name="search">Search</string>
    <string name="retry">retry</string>
    <string name="login_logout">LoginLogout</string>
    <string name="logout">Logout</string>
</resources>
