<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="handler"
            type="jp.rei.andou.githubbrowser.presentation.authorization.AuthorizationNavigator" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/border_margin"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_name_with_caret"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="48sp" />


        <android.support.design.widget.TextInputLayout
            android:layout_above="@id/password"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/password"
            android:layout_width="200dp"
            android:text="@string/login"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</layout>