<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="handler"
            type="jp.rei.andou.githubbrowser.presentation.authorization.AuthorizationNavigator" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/border_margin"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="48dp"
            android:layout_marginBottom="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_name_with_caret"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="48sp" />

        <Button
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in"
            android:onClick="@{() -> handler.routeToSignIn()}"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:onClick="@{() -> handler.routeToBrowserAsGuest()}"
            android:text="@string/guest"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>